# fastapi-featureflags

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
fastapi_featureflags/: __init__.py  main.py  router.py
tests/: conftest.py  features.json  pytest.ini  test_1.py  test_conf.py  test_conf_from_dict.py  test_conf_from_json.py  test_conf_from_url.py  test_routes.py  test_types.py
