[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "fastapi-featureflags"
authors = [ "Tomas Pytel <pytlicek@gmail.com>", "Martin Hablak <martin.hablak@gmail.com>"]
description = "Feature Flags for FastAPI"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/Pytlicek/ fastapi-featureflags"}
version= "0.1.0"

[project]
name = "fastapi-featureflags"
authors = [{name = "Tomas Pytel", email = "pytlicek@gmail.com"}, {name = "Martin Hablak", email = "martin.hablak@gmail.com"}]
description = "Feature Flags for FastAPI"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/Pytlicek/ fastapi-featureflags"}
requires-python = ">=3.7"
dependencies = []
dynamic = ["version"]

[tool.poetry.dependencies]
python = ">=3.7, <=3.12"
requests = "^2.29.0"
fastapi = "^0.95.1"

[tool.poetry.dev-dependencies]
httpx = "0.23.0"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
